--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,14 @@ server.port=8091
 
 
 spring.flyway.enabled=true
-spring.flyway.url=jdbc:h2:mem:TESTDB
-spring.flyway.schemas=TESTDB
+spring.flyway.url=jdbc:h2:mem:test
 spring.flyway.user=sa
 spring.flyway.password=secret
 
 
 spring.jpa.open-in-view=true
 
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url =jdbc:h2:mem:TESTDB;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=secret
